--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+*.gsc linguist-language=cpp
 
 # Custom for Visual Studio
 *.cs     diff=csharp
